Background Photo Commit

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background-image: url("https://img.freepik.com/free-photo/yellow-list-top-view_23-2148475388.jpg?w=2000");
+  background-image: url("bg-picture.jpg");
   color: white;
   font-family: "Lucida Sans";
   min-height: 100vh;
